Multi-DB JUnit test in Donkey module